<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_park"
        android:icon="@drawable/ic_logo"
        android:title="@string/menu_park_car"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_locate"
        android:icon="@drawable/ic_location_toolbar"
        android:title="@string/menu_locate_car"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_privacy"
        android:title="@string/menu_privacy_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_terms"
        android:title="@string/menu_terms_and_conditions"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>